# python-project-50

./: Makefile  README.md  pyproject.toml
.github/workflows/: pyci.yml
gendiff/: build_diff.py  cli.py  generate_diff.py  parser.py
gendiff/formatter/: plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_cli.py  test_generate_diff.py  test_json.py  test_plain.py
tests/test_data/: expected_json.txt
