[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.11.12",
    "pytest-cov>=4.0.0"
]


[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.pytest.ini_options]
addopts = "--cov=gendiff --cov-report=xml"
pythonpath = ["."] 